--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,7 +13,7 @@ android {
 
         def value = 0
         def runTasks = gradle.startParameter.taskNames
-        if ('assemble' in runTasks || 'assembleRelease' in runTasks || 'aR' in runTasks) {
+        if ('assemble' in runTasks || 'assembleRelease' in runTasks || 'aR' in runTasks || 'a' in runTasks) {
             value = 1;
         }
 
@@ -22,7 +22,7 @@ android {
         def versionPatch = versionProps['VERSION_PATCH'].toInteger() + value
 
         def versionBuild = versionProps['VERSION_BUILD'].toInteger() + 1
-        def versionNumber = versionProps['VERSION_NUMBER'].toInteger() + value
+        def versionNumber = versionProps['VERSION_NUMBER'].toInteger() + 1
 
         versionProps['VERSION_PATCH'] = versionPatch.toString()
         versionProps['VERSION_BUILD'] = versionBuild.toString()
