Google Login Check
Google Login Check후 마켓에 재 등록

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,7 +31,7 @@ android {
         versionProps.store(versionPropsFile.newWriter(), null)
 
         defaultConfig {
-            applicationId "com.ncslab.pyojihye.interpretprogram"
+            applicationId "com.ncslab.pyojihye.interpret"
             minSdkVersion 15
             targetSdkVersion 25
             versionCode versionNumber
